# win-dev-boxes

./: README.md  Readme.txt  bootstrap-project.bat  bootstrap.bat  choco-bootstrap.bat  choco-install-file.bat  choco-install.bat  choco-run-command.bat  choco-uninstall.bat  choco-uninstall.ps1  choco-upgrade.bat  create-module-devkit.bat  create-module-tests.bat  create-module.bat  create-project-devkit.bat  create-project.bat  deploy-scripts.bat  devenv.devkit.sln  file.txt  hello-world.bat  hello-world.ps1  install-choco.bat  install.bat  packages-infrastructure.config  packages-utilities.config  packages-utilities.txt  packages-win10-cibox.config  packages-win10-cibox.txt  packages-win10-devbox-host.config  packages-win10-devbox-host.txt  packages-win10-devbox.config  packages-win10-devbox.txt  packages-win7-devbox-host.config  packages-win7-devbox-host.txt  packages-win7-devbox.config  packages-win7-devbox.txt  packages.txt  run-choco.bat  uninstall-choco.bat  uninstall-choco.ps1  (+6 more)
module-templates/: .gitignore  CMakeLists-composite.txt  CMakeLists-devkit.txt  CMakeLists-src.txt  CMakeLists-tests.txt  CMakeLists.txt  [module-name].cpp  [module-name].h  [module-name]_tests.cpp
project-devkit-templates/: CMakeLists.txt  [project-name].cpp
project-templates/: [project-name].h  [project-name]_build_info.txt
win-dev-boxes/: win-dev-boxes.sln
win-dev-boxes/scripts/: scripts.vcxproj  scripts.vcxproj.filters
